--- a/styles.css
+++ b/styles.css
@@ -43,15 +43,14 @@ body {
 }
 
 .numbers div {
-    flex-basis: calc(33.33%);
+    flex-basis: calc(33.33%); /* each box takes up 1/3 of the numbers flexbox container */
     box-sizing: border-box;
     border: 1px solid black;
     
-    /* Flexbox for centering content */
     display: flex;
-    align-items: center;  /* Vertically center */
-    justify-content: center;  /* Horizontally center */
-    font-size: 100px;  /* Adjust font size as needed */
+    align-items: center;  
+    justify-content: center;  
+    font-size: 70px;  
 }
 
 .operators div {
@@ -60,7 +59,7 @@ body {
     border: 1px solid black;
 
     display: flex;
-    align-items: center;  /* Vertically center */
-    justify-content: center;  /* Horizontally center */
+    align-items: center;
+    justify-content: center;
     font-size: 50px; 
 }
