--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Inter';
+}
+
 body {
     display: flex;
     align-items: center;
@@ -7,8 +11,8 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    height: 900px;
-    width: 800px;
+    height: 600px;
+    width: 500px;
     background-color: lightgrey;
     padding: 20px;
     gap: 40px;
@@ -47,7 +51,7 @@ body {
 }
 
 .numbers div {
-    flex-basis: calc(33.33%); /* each box takes up 1/3 of the numbers flexbox container */
+    flex-basis: calc(33.33%); /* each box takes up 1/3 of the 'numbers' flexbox container */
     box-sizing: border-box;
     border: 1px solid black;
     
