--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #131212;
 }
 
 .container {
@@ -13,19 +14,45 @@ body {
     flex-direction: column;
     height: 600px;
     width: 500px;
-    background-color: lightgrey;
+    background-color: #000;
+
+    border: 20px solid gray;
+    border-radius: 12px;
+
     padding: 20px;
     gap: 40px;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 36px;
+    flex-basis: 0%;
+    font-style: italic;
+
+    border: 2px solid white;
+    border-radius: 40px;
+
+    color: cyan; /* Text color */
+    text-shadow: 0 0 5px #f6f5f4, 0 0 10px #f6f5f4, 0 0 20px #f6f5f4;
+    font-size: 2rem; /* Increase font size for better visibility */
 }
 
 .display {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    background-color: white;
-    border: 1px solid black;
+    background-color: rgb(36, 35, 35);
+    border: 2px solid white;
+    border-radius: 20px;
     flex-basis: 10%;
     font-size: 50px;
+
+    color: cyan;
+    text-shadow: 0 0 5px #f6f5f4, 0 0 10px #f6f5f4, 0 0 20px #f6f5f4;
+
 }
 
 .inputs {
@@ -38,22 +65,33 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-basis: 80%;
-    background-color: white;
-    border: 1px solid black;
+    background-color: rgb(36, 35, 35);
+
+    border: 2px solid white;
+    border-radius: 8px;
+
+    color: cyan;
+    text-shadow: 0 0 5px #f6f5f4, 0 0 10px #f6f5f4, 0 0 20px #f6f5f4;
 }
 
 .operators {
     display: flex;
     flex-wrap: wrap;
     flex-basis: 20%;
-    background-color: white;
-    border: 1px solid black;
+    background-color: rgb(36, 35, 35);
+
+    border: 2px solid white;
+    border-radius: 8px;
+
+    color: cyan;
+    text-shadow: 0 0 5px #f6f5f4, 0 0 10px #f6f5f4, 0 0 20px #f6f5f4;
 }
 
 .numbers div {
     flex-basis: calc(33.33%); /* each box takes up 1/3 of the 'numbers' flexbox container */
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid white;
+    border-radius: 4px;
     
     display: flex;
     align-items: center;  
@@ -64,7 +102,8 @@ body {
 .operators div {
     flex-basis: 100%;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid white;
+    border-radius: 4px;
 
     display: flex;
     align-items: center;
